[metadata]
name = pipe-subprocess
author = Shusaku Miwa
author_email = shusakumiwa@gmail.com
description = Connects subprocesses as pipe easily
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/ssk38/pipesubprocess
python_requires = '>=3.6',
license = MIT

[options]
packages = find:
